vlib/v/checker/tests/struct_init_update_struct_err.vv
struct Foo {
	name string
	age int
}

struct Foo2 {}

fn main() {
	f3 := Foo2{}
	_ := Foo{
		...f3
		name: 'f2'
	}
}

